# maven-rs

./: Cargo.toml  LICENSE-MIT  README  README.md  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: check.yml
examples/: check_against_local_repo.rs
src/: extension.rs  lib.rs  local_config.rs  maven_metadata.rs  pom.rs  settings.rs  snapshot_metadata.rs  time.rs  utils.rs
src/editor/: mod.rs  utils.rs
src/meta/: maven_metadata.rs  mod.rs  snapshot_metadata.rs
src/pom/: build.rs  depend.rs  developers.rs  distribution_management.rs  editor.rs  parent.rs  properties.rs  repositories.rs  scm.rs
src/pom/depend/: resolve.rs
src/pom/editor/: build.rs  dependency_management.rs  distribution_management.rs
src/resolver/: mod.rs
src/settings/: mirrors.rs  servers.rs
src/types/: mod.rs  prop.rs
src/utils/: parse.rs  serde_utils.rs  time.rs
tests/: fuzz_pom_editor.rs  meta_tests.rs  pom_editor.rs  serde_pom.rs
tests/data/: test-pom.xml
tests/data/bugs/depends/: httpclient_4_0_2.toml
tests/data/meta/kakara-engine/: maven-metadata.xml  snapshot.xml
tests/data/test_poms/: lwjgl-bom-3.3.4.pom
