[package]
name = "maven-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5"
chrono = "0.4"
reqwest = { version = "0.11", features = ["stream"], optional = true }
directories = { version = "4", optional = true }
thiserror = { version = "1" }
[features]
local_config = ["directories"]
