[package]
name = "maven-rs"
version = "0.1.0"
edition = "2021"
autoexamples = false
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
description = "A library for interacting with Maven files such as POMs and repositories."
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Parsing Libraries
quick-xml = { version = "0.37", features = ["serialize"] }
winnow = { version = "0.7" }
edit-xml = { git = "https://github.com/wyatt-herkamp/edit-xml.git", features = [
    "ahash",
    "soft-fail-unescape",
    "tracing",
] }
## Serde for serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
## Macro Utilities
thiserror = { version = "2" }
derive_builder = "0.20"
strum = { version = "0.27", features = ["derive"] }
## Other Libs
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "6", optional = true }
ahash = "0.8"
tracing = "0.1"

## Used for making HTTP requests to Maven repositories
reqwest = { version = "0.12", features = ["stream"], optional = true }
url = { version = "2", optional = true }
bytes = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = ["local"]
local = ["dirs"]
resolver = ["reqwest", "url", "bytes", "base64"]
## This feature is mainly for debugging purposes
bug-files = []
[dev-dependencies]
anyhow = { version = "1" }
pretty_assertions = { version = "1" }
tokio = { version = "1", features = ["full"] }
walkdir = { version = "2" }
toml = { version = "0.8" }

[[example]]
name = "check_against_local_repo"
required-features = ["local"]
